RESOLVED FIXED40803
TestNetscapePlugin has an incorrect implementation of "property" property
https://bugs.webkit.org/show_bug.cgi?id=40803
Summary TestNetscapePlugin has an incorrect implementation of "property" property
Alexey Proskuryakov
Reported 2010-06-17 17:07:34 PDT
It's currently unused, but when I tried to use it to check some behavior, this brokenness has confused me a lot. Now that I understand what's going on, I already have a test and a fix.
Attachments
proposed fix (3.50 KB, patch)
2010-06-17 17:09 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-06-17 17:09:45 PDT
Created attachment 59050 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-06-18 10:00:16 PDT
WebKit Review Bot
Comment 3 2010-06-18 10:21:26 PDT
Note You need to log in before you can comment on or make changes to this bug.