        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=40803
        TestNetscapePlugin has an incorrect implementation of "property" property

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp: (pluginGetProperty): Don't
        pass a static string back, it's going to be released by NPAPI implementation.



Canonical link: https://commits.webkit.org/52425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61415 268f45cc-cd09-0410-ab3c-d52691b4dbfc